# Lava-Testing

./: README.md
chalmers-lava/: README.md
chalmers-lava/chalmers-lava-testing/: .gitignore  4BitAdder.vhd  4BitAdder_row.vhd  CHANGELOG.md  LICENSE  Main.hs  Processor.hs  README.md  VhdlNew11.hs  cabal.project  chalmers-lava-testing.cabal  halfAdd.vhd  halfAddwithoutClk.vhd
chalmers-lava/chalmers-lava-testing/Verify/: circuit.cnf  circuit.cnf.out  circuit.defs  circuit.prov  circuit.smv
chalmers-lava/chalmers-lava2000-1.6.1/: .gitignore  INSTALL  LICENSE  Lava.hs
chalmers-lava/chalmers-lava2000-1.6.1/Lava/: LavaRandom.hs  Minisat.hs  Smv.hs
chalmers-lava/chalmers-lava2000-1.6.1/Scripts/: minisat.wrapper  satzoo.wrapper  smv.wrapper
chalmers-lava/minisat/: .gitignore  Makefile
