cabal-version:       >=1.10
name:                chalmers-lava-testing
version:             0.1.0.0
synopsis:            testing chalmers-lava for the cs595e presentation
license:             MIT
license-file:        LICENSE
author:              Michael Christensen
maintainer:          chmdko@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable chalmers-lava-testing
  main-is:             Main.hs
  build-depends:       base >=3 && <5
                     , chalmers-lava2000
  default-language:    Haskell2010
